<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hatun</string>
    <string name="app_titulo">Hatunsol - Tu Casa Hoy</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_icono">Icono</string>

    <string name="agregar_local">Agregar Local</string>
    <string name="telefono">Teléfono</string>
    <string name="estado">Estado</string>
    <string name="contacto">Contacto</string>
    <string name="direccion">Dirección</string>
    <string name="distrito">Distrito</string>
    <string name="supervisor">Supervisor</string>
    <string name="agregar">Agregar</string>

    <string name="title_activity_agregar_local">Agregar Local</string>
    <string name="title_activity_registro_contacto">Reg. Contacto</string>
    <string name="title_activity_afilicacion_establecimiento">Afiliación de Establecimientos</string>
    <string name="title_activity_registro_venta">Registro de Venta</string>
    <string name="title_activity_miscreditos">Mis Créditos</string>
    <string name="title_activity_buscarproveedor">Establecimientos</string>
    <string name="title_activity_datosproveedor">Establecimiento</string>
    <string name="title_activity_consulta_credito">Consulta de Crédito</string>
    <string name="razon_social">Razón Social</string>
    <string name="direccionagencia">DIRECCION</string>
    <string name="ruc">RUC</string>
    <string name="nombre">NOMBRE</string>
    <string name="codigoagencia">AGENCIA</string>
    <string name="nombre_comercial">Nombre Comercial</string>
    <string name="tipo">Tipo</string>
    <string name="representante">Representante</string>
    <string name="telefonooficina">TELEFONO</string>
    <string name="codigooficina">CODIGO OFICINA</string>
    <string name="dni">DNI</string>
    <string name="dnirepresentante">DNI Repre.</string>
    <string name="observaciones">Observaciones</string>
    <string name="localid">CODIGO LOCAL</string>
    <string name="zonaid">CODIGO ZONA</string>
    <string name="descripcionlocal">DESCRIPCION</string>

    <string name="Agregar_Conyugue">Agregar Conyugue</string>
    <string name="Agregar_GarantePropiedad">Agregar Garante de Propiedad</string>
    <string name="Agregar_GaranteIngresos">Agregar Garante de Ingresos</string>
    <string name="Agregar_ConyugueGP">Agregar Conyugue G. Propiedad</string>
    <string name="Agregar_ConyugueGI">Agregar Conyugue G. Ingresos</string>

    <string name="title_activity_proveedoor">Proveedor</string>
    <string name="title_activity_proveedorlocal">Proveedor Local</string>
    <string name="title_proveedor_historial">Historial</string>

    <string name="search_label">Buscar</string>
    <string name="search_hint">Buscar</string>

    <string-array name="list_of_countries">
        <item>USA</item>
        <item>Uk</item>
        <item>United States</item>
        <item>USAD</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>France</item>
        <item>Italy</item>
        <item>China</item>
        <item>Japan</item>
        <item>Spain</item>
    </string-array>
    <string name="title_activity_lista_establecimiento">Establecimientos</string>
    <string name="title_activity_lista_ventas">Listado de Ventas</string>
    <string name="title_activity_detalle">Detalle de la venta</string>
    <string name="guardar">Guardar</string>
    <string name="save_password">Recordar Contraseña</string>
    <string name="locales">Locales</string>
    <string name="local">Local</string>
    <string name="origen">Origen</string>
    <string name="plan">Plan de Trabajo</string>
    <string name="call_center">Call Center</string>
    <string name="technical_support">Soporte técnico</string>
    <string name="establecimientos">Establecimientos</string>
    <string name="title_activity_prueba">prueba</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_supervisor_">Supervisor_Activity</string>
    <string name="title_activity_web_">Web_Activity</string>
    <string name="title_activity_menu_slide">MenuSlideActivity</string>
    <string name="action_example">Example action</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">Login</string>

    <string name="title_activity_revisar_encuesta">Revisar Encuesta</string>




    <!--Mensajes-->
    <string name="msg_Auditoria">Auditoria Creada Correctamente</string>


    <string-array name="document_array">
        <item>DNI</item>
        <item>RUC</item>
        <item>Carnet de Extranjeria</item>
    </string-array>
    <string-array name="document_array_a">
        <item>DNI</item>
        <item>Carnet de Extranjeria</item>
    </string-array>
    <string-array name="estado_civil_array">
        <item>SOLTERO</item>
        <item>CASADO</item>
        <item>VIUDO</item>
        <item>CONVIVIENTE</item>
        <item>DIVORCIADO</item>
    </string-array>
    <string-array name="estado_civil_array_c">
        <item>CASADO</item>
        <item>CONVIVIENTE</item>
    </string-array>
    <string-array name="tipo_establecimiento">
        <item>PROPIO</item>
        <item>ALQUILADO</item>
    </string-array>
    <string-array name="actividad_trabajo">
        <item>Recibo por Honorarios - 03 Ultimos Meses de Ingreso</item>
        <item>Boletas de Pago - 02 Ultimos Meses</item>
        <item>Doc. - 06 Meses de Actividad Continua</item>
    </string-array>
    <string-array name="actividad_trabajo_dependiente">
        <item>Recibo por Honorarios - 03 Ultimos Meses de Ingreso</item>
        <item>Boletas de Pago - 02 Ultimos Meses</item>
    </string-array>
    <string-array name="tipo_establecieminto_nombre">
        <item>MERCADO</item>
        <item>TIENDA</item>
        <item>OTROS</item>
        <item>EMPRESA</item>
    </string-array>
    <string-array name="grado_instruccion">
        <item>GRADO INSTRUCCION</item>
        <item>PRIMARIA</item>
        <item>SECUNDARIA</item>
        <item>TECNICA</item>
        <item>SUPERIOR</item>
        <item>GRADO BACHILLER</item>
        <item>TITULADO</item>
        <item>COLEGIADO</item>
    </string-array>
    <string-array name="tipo_establecieminto_nombreI">
        <item>MERCADO</item>
        <item>TIENDA</item>
        <item>OTROS</item>
    </string-array>
    <string-array name="ProveedorLocal_entries">
        <item>Seleccione</item>
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>

    <string-array name="ProveedorLocal_values">
        <item>-1</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="facebook_app_id">2495594834096170</string> <string name="fb_login_protocol_scheme">fb688769184981117</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="FACEBOOK_APP_ID">2495594834096170</string>
</resources>
