<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="4dp"
                android:layout_height="0dp"
                android:background="@color/md_yellow_700"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/txt_datos_generales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:text="Datos Agencia"
                android:textSize="20dp"
                android:layout_margin="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="4dp"
                android:layout_height="0dp"
                android:background="@color/md_yellow_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_datos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_margin="5dp">

            <View
                android:id="@+id/third"
                android:layout_width="0.1dp"
                android:layout_height="0.1dp"
                android:layout_marginLeft="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvAgenciaId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Agencia ID"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etAgenciaId"
                app:layout_constraintEnd_toStartOf="@+id/third"
                app:layout_constraintBottom_toBottomOf="@id/etAgenciaId"/>

            <EditText
                android:id="@+id/etAgenciaId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/codigoagencia"
                android:background="@drawable/border_edt"
                android:padding="7dp"
                android:enabled="false"
                app:layout_constraintStart_toEndOf="@id/third"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Nombre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etOficinaNombre"
                app:layout_constraintEnd_toStartOf="@+id/third"
                app:layout_constraintBottom_toBottomOf="@id/etOficinaNombre" />

            <EditText
                android:id="@+id/etOficinaNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/nombre"
                android:background="@drawable/border_edt"
                android:padding="7dp"
                android:enabled="false"
                android:inputType="textCapCharacters"
                android:maxLength="100"
                app:layout_constraintStart_toEndOf="@+id/tvNombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAgenciaId"/>

            <TextView
                android:id="@+id/tvDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Dirección"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etDireccion"
                app:layout_constraintEnd_toStartOf="@+id/third"
                app:layout_constraintBottom_toBottomOf="@id/etDireccion" />

            <EditText
                android:id="@+id/etDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/direccionagencia"
                android:background="@drawable/border_edt"
                android:padding="7dp"
                android:inputType="textCapCharacters"
                android:maxLength="150"
                app:layout_constraintStart_toEndOf="@+id/tvDireccion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etOficinaNombre" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Teléfono"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etTelefono"
                app:layout_constraintEnd_toStartOf="@+id/third"
                app:layout_constraintBottom_toBottomOf="@id/etTelefono" />

            <EditText
                android:id="@+id/etTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/telefonooficina"
                android:background="@drawable/border_edt"
                android:padding="7dp"
                android:inputType="textCapCharacters"
                android:maxLength="50"
                app:layout_constraintStart_toEndOf="@+id/tvDireccion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etDireccion"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>